# account-service

./: .gitignore  Makefile  WORKSPACE  deps.bzl  docker-compose.yml  go.mod  go.sum
cmd/server/: BUILD.bazel  main.go  main_test.go
config/: local.yml
internal/address/: BUILD.bazel  api.go  api_test.go  repository.go  repository_test.go  service.go  service_test.go
internal/auth/: BUILD.bazel  api.go  api_test.go  middleware.go  middleware_test.go  service.go  service_test.go
internal/config/: BUILD.bazel  config.go
internal/entity/: BUILD.bazel  address.go  address_test.go
internal/errors/: BUILD.bazel  middleware.go  middleware_test.go
internal/healthcheck/: BUILD.bazel  api_test.go
internal/test/: BUILD.bazel  db.go  mock.go
migrations/: 20191217202658_init.down.sql  20191217202658_init.up.sql
pkg/accesslog/: BUILD.bazel  middleware.go  middleware_test.go
pkg/dbcontext/: BUILD.bazel  db.go  db_test.go
pkg/env/: BUILD.bazel  env.go  env_test.go
pkg/log/: BUILD.bazel
pkg/pagination/: BUILD.bazel
testdata/: testdata.sql
