load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/Melon-Network-Inc/account-service/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/address",
        "//internal/auth",
        "//internal/config",
        "//internal/errors",
        "//internal/healthcheck",
        "//pkg/accesslog",
        "//pkg/dbcontext",
        "//pkg/log",
        "@com_github_go_ozzo_ozzo_dbx//:ozzo-dbx",
        "@com_github_go_ozzo_ozzo_routing_v2//:ozzo-routing",
        "@com_github_go_ozzo_ozzo_routing_v2//content",
        "@com_github_go_ozzo_ozzo_routing_v2//cors",
        "@com_github_lib_pq//:pq",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "server_test",
    srcs = ["main_test.go"],
    embed = [":server_lib"],
    deps = [
        "//pkg/log",
        "@com_github_stretchr_testify//assert",
    ],
)
