load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/Melon-Network-Inc/account-service/internal/config",
    visibility = ["//:__subpackages__"],
    deps = [
        "//pkg/env",
        "//pkg/log",
        "@com_github_go_ozzo_ozzo_validation_v4//:ozzo-validation",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)
