load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "entity",
    srcs = [
        "address.go",
        "id.go",
        "user.go",
    ],
    importpath = "github.com/Melon-Network-Inc/account-service/internal/entity",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_google_uuid//:uuid"],
)
