load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "entity",
    srcs = [
        "address.go",
        "id.go",
        "user.go",
    ],
    importpath = "github.com/Melon-Network-Inc/account-service/internal/entity",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_google_uuid//:uuid"],
)

go_test(
    name = "entity_test",
    srcs = ["address_test.go"],
    embed = [":entity"],
    deps = ["@com_github_stretchr_testify//assert"],
)
