load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "healthcheck",
    srcs = ["api.go"],
    importpath = "github.com/Melon-Network-Inc/account-service/internal/healthcheck",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_go_ozzo_ozzo_routing_v2//:ozzo-routing"],
)

go_test(
    name = "healthcheck_test",
    srcs = ["api_test.go"],
    embed = [":healthcheck"],
    deps = [
        "//internal/test",
        "//pkg/log",
    ],
)
